# validate-telegram-markdown

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: tests.py
validate_telegram_markdown/: __init__.py
